tests/suite/snapshots/suite__case_wz62.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: MappingStart
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: Break
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 3
    line: 1
    column: 0
- token: Indent
  start:
    index: 3
    line: 1
    column: 0
  end:
    index: 3
    line: 1
    column: 0
- token: Separator
  start:
    index: 3
    line: 1
    column: 0
  end:
    index: 5
    line: 1
    column: 2
- token: Scalar
  start:
    index: 5
    line: 1
    column: 2
  end:
    index: 8
    line: 1
    column: 5
- token: Separator
  start:
    index: 8
    line: 1
    column: 5
  end:
    index: 9
    line: 1
    column: 6
- token: MappingValue
  start:
    index: 9
    line: 1
    column: 6
  end:
    index: 10
    line: 1
    column: 7
- token: Separator
  start:
    index: 10
    line: 1
    column: 7
  end:
    index: 11
    line: 1
    column: 8
- token: TagHandle
  start:
    index: 11
    line: 1
    column: 8
  end:
    index: 13
    line: 1
    column: 10
- token: TagSuffix
  start:
    index: 13
    line: 1
    column: 10
  end:
    index: 16
    line: 1
    column: 13
- token: Empty
  start:
    index: 16
    line: 1
    column: 13
  end:
    index: 16
    line: 1
    column: 13
- token: CollectionEntry
  start:
    index: 16
    line: 1
    column: 13
  end:
    index: 17
    line: 1
    column: 14
- token: Break
  start:
    index: 17
    line: 1
    column: 14
  end:
    index: 19
    line: 2
    column: 0
- token: Indent
  start:
    index: 19
    line: 2
    column: 0
  end:
    index: 19
    line: 2
    column: 0
- token: Separator
  start:
    index: 19
    line: 2
    column: 0
  end:
    index: 21
    line: 2
    column: 2
- token: TagHandle
  start:
    index: 21
    line: 2
    column: 2
  end:
    index: 23
    line: 2
    column: 4
- token: TagSuffix
  start:
    index: 23
    line: 2
    column: 4
  end:
    index: 26
    line: 2
    column: 7
- token: Empty
  start:
    index: 26
    line: 2
    column: 7
  end:
    index: 26
    line: 2
    column: 7
- token: Separator
  start:
    index: 26
    line: 2
    column: 7
  end:
    index: 27
    line: 2
    column: 8
- token: MappingValue
  start:
    index: 27
    line: 2
    column: 8
  end:
    index: 28
    line: 2
    column: 9
- token: Separator
  start:
    index: 28
    line: 2
    column: 9
  end:
    index: 29
    line: 2
    column: 10
- token: Scalar
  start:
    index: 29
    line: 2
    column: 10
  end:
    index: 32
    line: 2
    column: 13
- token: CollectionEntry
  start:
    index: 32
    line: 2
    column: 13
  end:
    index: 33
    line: 2
    column: 14
- token: Break
  start:
    index: 33
    line: 2
    column: 14
  end:
    index: 35
    line: 3
    column: 0
- token: Indent
  start:
    index: 35
    line: 3
    column: 0
  end:
    index: 35
    line: 3
    column: 0
- token: MappingEnd
  start:
    index: 35
    line: 3
    column: 0
  end:
    index: 36
    line: 3
    column: 1
- token: Break
  start:
    index: 36
    line: 3
    column: 1
  end:
    index: 38
    line: 4
    column: 0

