tests/suite/snapshots/suite__case_xlq9.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DirectivesEnd
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 3
- token: Break
  start:
    line: 0
    column: 3
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: Scalar
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 6
- token: ScalarSpace
  start:
    line: 1
    column: 6
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: Scalar
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 9
- token: Break
  start:
    line: 2
    column: 9
  end:
    line: 3
    column: 0

