tests/suite/snapshots/suite__case_xv9v.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: Scalar
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 7
- token: MappingValue
  start:
    line: 0
    column: 7
  end:
    line: 0
    column: 8
- token: Break
  start:
    line: 0
    column: 8
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: Separator
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 2
- token: DoubleQuote
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 3
- token: DoubleQuoted
  start:
    line: 1
    column: 3
  end:
    line: 1
    column: 13
- token: Break
  start:
    line: 1
    column: 13
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: ScalarBreak
  start:
    line: 2
    column: 0
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 1
- token: Separator
  start:
    line: 3
    column: 1
  end:
    line: 3
    column: 2
- token: DoubleQuoted
  start:
    line: 3
    column: 2
  end:
    line: 3
    column: 16
- token: DoubleQuote
  start:
    line: 3
    column: 16
  end:
    line: 3
    column: 17
- token: Break
  start:
    line: 3
    column: 17
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 0
- token: Scalar
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 8
- token: MappingValue
  start:
    line: 4
    column: 8
  end:
    line: 4
    column: 9
- token: Separator
  start:
    line: 4
    column: 9
  end:
    line: 4
    column: 10
- token: Literal
  start:
    line: 4
    column: 10
  end:
    line: 4
    column: 11
- token: Break
  start:
    line: 4
    column: 11
  end:
    line: 5
    column: 0
- token: Indent
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 2
- token: Scalar
  start:
    line: 5
    column: 2
  end:
    line: 5
    column: 21
- token: ScalarBreak
  start:
    line: 5
    column: 21
  end:
    line: 6
    column: 0
- token: Indent
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 1
- token: Break
  start:
    line: 6
    column: 1
  end:
    line: 7
    column: 0
- token: Indent
  start:
    line: 7
    column: 0
  end:
    line: 7
    column: 0
- token: Break
  start:
    line: 7
    column: 0
  end:
    line: 8
    column: 0

