tests/suite/snapshots/suite__case_xw4d.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: Scalar
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: MappingValue
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 2
    line: 0
    column: 2
- token: Separator
  start:
    index: 2
    line: 0
    column: 2
  end:
    index: 3
    line: 0
    column: 3
- token: DoubleQuote
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 4
    line: 0
    column: 4
- token: DoubleQuoted
  start:
    index: 4
    line: 0
    column: 4
  end:
    index: 10
    line: 0
    column: 10
- token: ScalarSpace
  start:
    index: 10
    line: 0
    column: 10
  end:
    index: 12
    line: 1
    column: 0
- token: Indent
  start:
    index: 12
    line: 1
    column: 0
  end:
    index: 13
    line: 1
    column: 1
- token: Separator
  start:
    index: 13
    line: 1
    column: 1
  end:
    index: 14
    line: 1
    column: 2
- token: DoubleQuoted
  start:
    index: 14
    line: 1
    column: 2
  end:
    index: 20
    line: 1
    column: 8
- token: DoubleQuote
  start:
    index: 20
    line: 1
    column: 8
  end:
    index: 21
    line: 1
    column: 9
- token: Separator
  start:
    index: 21
    line: 1
    column: 9
  end:
    index: 22
    line: 1
    column: 10
- token: Comment
  start:
    index: 22
    line: 1
    column: 10
  end:
    index: 23
    line: 1
    column: 11
- token: CommentText
  start:
    index: 23
    line: 1
    column: 11
  end:
    index: 28
    line: 1
    column: 16
- token: Break
  start:
    index: 28
    line: 1
    column: 16
  end:
    index: 30
    line: 2
    column: 0
- token: Indent
  start:
    index: 30
    line: 2
    column: 0
  end:
    index: 30
    line: 2
    column: 0
- token: Scalar
  start:
    index: 30
    line: 2
    column: 0
  end:
    index: 31
    line: 2
    column: 1
- token: MappingValue
  start:
    index: 31
    line: 2
    column: 1
  end:
    index: 32
    line: 2
    column: 2
- token: Separator
  start:
    index: 32
    line: 2
    column: 2
  end:
    index: 33
    line: 2
    column: 3
- token: Scalar
  start:
    index: 33
    line: 2
    column: 3
  end:
    index: 38
    line: 2
    column: 8
- token: ScalarSpace
  start:
    index: 38
    line: 2
    column: 8
  end:
    index: 40
    line: 3
    column: 0
- token: Indent
  start:
    index: 40
    line: 3
    column: 0
  end:
    index: 41
    line: 3
    column: 1
- token: Scalar
  start:
    index: 41
    line: 3
    column: 1
  end:
    index: 46
    line: 3
    column: 6
- token: Separator
  start:
    index: 46
    line: 3
    column: 6
  end:
    index: 48
    line: 3
    column: 8
- token: Comment
  start:
    index: 48
    line: 3
    column: 8
  end:
    index: 49
    line: 3
    column: 9
- token: CommentText
  start:
    index: 49
    line: 3
    column: 9
  end:
    index: 54
    line: 3
    column: 14
- token: Break
  start:
    index: 54
    line: 3
    column: 14
  end:
    index: 56
    line: 4
    column: 0
- token: Indent
  start:
    index: 56
    line: 4
    column: 0
  end:
    index: 56
    line: 4
    column: 0
- token: Scalar
  start:
    index: 56
    line: 4
    column: 0
  end:
    index: 57
    line: 4
    column: 1
- token: Separator
  start:
    index: 57
    line: 4
    column: 1
  end:
    index: 59
    line: 4
    column: 3
- token: MappingValue
  start:
    index: 59
    line: 4
    column: 3
  end:
    index: 60
    line: 4
    column: 4
- token: Separator
  start:
    index: 60
    line: 4
    column: 4
  end:
    index: 61
    line: 4
    column: 5
- token: Comment
  start:
    index: 61
    line: 4
    column: 5
  end:
    index: 62
    line: 4
    column: 6
- token: CommentText
  start:
    index: 62
    line: 4
    column: 6
  end:
    index: 66
    line: 4
    column: 10
- token: Break
  start:
    index: 66
    line: 4
    column: 10
  end:
    index: 68
    line: 5
    column: 0
- token: Indent
  start:
    index: 68
    line: 5
    column: 0
  end:
    index: 69
    line: 5
    column: 1
- token: Separator
  start:
    index: 69
    line: 5
    column: 1
  end:
    index: 70
    line: 5
    column: 2
- token: Scalar
  start:
    index: 70
    line: 5
    column: 2
  end:
    index: 71
    line: 5
    column: 3
- token: Break
  start:
    index: 71
    line: 5
    column: 3
  end:
    index: 73
    line: 6
    column: 0
- token: Indent
  start:
    index: 73
    line: 6
    column: 0
  end:
    index: 73
    line: 6
    column: 0
- token: MappingKey
  start:
    index: 73
    line: 6
    column: 0
  end:
    index: 74
    line: 6
    column: 1
- token: Separator
  start:
    index: 74
    line: 6
    column: 1
  end:
    index: 75
    line: 6
    column: 2
- token: Comment
  start:
    index: 75
    line: 6
    column: 2
  end:
    index: 76
    line: 6
    column: 3
- token: CommentText
  start:
    index: 76
    line: 6
    column: 3
  end:
    index: 81
    line: 6
    column: 8
- token: Break
  start:
    index: 81
    line: 6
    column: 8
  end:
    index: 83
    line: 7
    column: 0
- token: Indent
  start:
    index: 83
    line: 7
    column: 0
  end:
    index: 84
    line: 7
    column: 1
- token: SequenceEntry
  start:
    index: 84
    line: 7
    column: 1
  end:
    index: 85
    line: 7
    column: 2
- token: Separator
  start:
    index: 85
    line: 7
    column: 2
  end:
    index: 86
    line: 7
    column: 3
- token: Scalar
  start:
    index: 86
    line: 7
    column: 3
  end:
    index: 90
    line: 7
    column: 7
- token: Break
  start:
    index: 90
    line: 7
    column: 7
  end:
    index: 92
    line: 8
    column: 0
- token: Indent
  start:
    index: 92
    line: 8
    column: 0
  end:
    index: 92
    line: 8
    column: 0
- token: MappingValue
  start:
    index: 92
    line: 8
    column: 0
  end:
    index: 93
    line: 8
    column: 1
- token: Separator
  start:
    index: 93
    line: 8
    column: 1
  end:
    index: 94
    line: 8
    column: 2
- token: Comment
  start:
    index: 94
    line: 8
    column: 2
  end:
    index: 95
    line: 8
    column: 3
- token: CommentText
  start:
    index: 95
    line: 8
    column: 3
  end:
    index: 100
    line: 8
    column: 8
- token: Break
  start:
    index: 100
    line: 8
    column: 8
  end:
    index: 102
    line: 9
    column: 0
- token: Indent
  start:
    index: 102
    line: 9
    column: 0
  end:
    index: 103
    line: 9
    column: 1
- token: SequenceEntry
  start:
    index: 103
    line: 9
    column: 1
  end:
    index: 104
    line: 9
    column: 2
- token: Separator
  start:
    index: 104
    line: 9
    column: 2
  end:
    index: 105
    line: 9
    column: 3
- token: Comment
  start:
    index: 105
    line: 9
    column: 3
  end:
    index: 106
    line: 9
    column: 4
- token: CommentText
  start:
    index: 106
    line: 9
    column: 4
  end:
    index: 110
    line: 9
    column: 8
- token: Break
  start:
    index: 110
    line: 9
    column: 8
  end:
    index: 112
    line: 10
    column: 0
- token: Indent
  start:
    index: 112
    line: 10
    column: 0
  end:
    index: 114
    line: 10
    column: 2
- token: Scalar
  start:
    index: 114
    line: 10
    column: 2
  end:
    index: 118
    line: 10
    column: 6
- token: Break
  start:
    index: 118
    line: 10
    column: 6
  end:
    index: 120
    line: 11
    column: 0
- token: Indent
  start:
    index: 120
    line: 11
    column: 0
  end:
    index: 120
    line: 11
    column: 0
- token: Scalar
  start:
    index: 120
    line: 11
    column: 0
  end:
    index: 121
    line: 11
    column: 1
- token: MappingValue
  start:
    index: 121
    line: 11
    column: 1
  end:
    index: 122
    line: 11
    column: 2
- token: Break
  start:
    index: 122
    line: 11
    column: 2
  end:
    index: 124
    line: 12
    column: 0
- token: Indent
  start:
    index: 124
    line: 12
    column: 0
  end:
    index: 125
    line: 12
    column: 1
- token: Anchor
  start:
    index: 125
    line: 12
    column: 1
  end:
    index: 126
    line: 12
    column: 2
- token: AnchorName
  start:
    index: 126
    line: 12
    column: 2
  end:
    index: 130
    line: 12
    column: 6
- token: Separator
  start:
    index: 130
    line: 12
    column: 6
  end:
    index: 131
    line: 12
    column: 7
- token: Comment
  start:
    index: 131
    line: 12
    column: 7
  end:
    index: 132
    line: 12
    column: 8
- token: CommentText
  start:
    index: 132
    line: 12
    column: 8
  end:
    index: 137
    line: 12
    column: 13
- token: Break
  start:
    index: 137
    line: 12
    column: 13
  end:
    index: 139
    line: 13
    column: 0
- token: Indent
  start:
    index: 139
    line: 13
    column: 0
  end:
    index: 140
    line: 13
    column: 1
- token: SequenceEntry
  start:
    index: 140
    line: 13
    column: 1
  end:
    index: 141
    line: 13
    column: 2
- token: Indent
  start:
    index: 141
    line: 13
    column: 2
  end:
    index: 142
    line: 13
    column: 3
- token: Scalar
  start:
    index: 142
    line: 13
    column: 3
  end:
    index: 143
    line: 13
    column: 4
- token: MappingValue
  start:
    index: 143
    line: 13
    column: 4
  end:
    index: 144
    line: 13
    column: 5
- token: Separator
  start:
    index: 144
    line: 13
    column: 5
  end:
    index: 145
    line: 13
    column: 6
- token: Scalar
  start:
    index: 145
    line: 13
    column: 6
  end:
    index: 146
    line: 13
    column: 7
- token: Break
  start:
    index: 146
    line: 13
    column: 7
  end:
    index: 148
    line: 14
    column: 0
- token: Indent
  start:
    index: 148
    line: 14
    column: 0
  end:
    index: 148
    line: 14
    column: 0
- token: Scalar
  start:
    index: 148
    line: 14
    column: 0
  end:
    index: 153
    line: 14
    column: 5
- token: MappingValue
  start:
    index: 153
    line: 14
    column: 5
  end:
    index: 154
    line: 14
    column: 6
- token: Separator
  start:
    index: 154
    line: 14
    column: 6
  end:
    index: 155
    line: 14
    column: 7
- token: Folded
  start:
    index: 155
    line: 14
    column: 7
  end:
    index: 156
    line: 14
    column: 8
- token: Separator
  start:
    index: 156
    line: 14
    column: 8
  end:
    index: 157
    line: 14
    column: 9
- token: Comment
  start:
    index: 157
    line: 14
    column: 9
  end:
    index: 158
    line: 14
    column: 10
- token: CommentText
  start:
    index: 158
    line: 14
    column: 10
  end:
    index: 163
    line: 14
    column: 15
- token: Break
  start:
    index: 163
    line: 14
    column: 15
  end:
    index: 165
    line: 15
    column: 0
- token: Indent
  start:
    index: 165
    line: 15
    column: 0
  end:
    index: 167
    line: 15
    column: 2
- token: Scalar
  start:
    index: 167
    line: 15
    column: 2
  end:
    index: 172
    line: 15
    column: 7
- token: ScalarBreak
  start:
    index: 172
    line: 15
    column: 7
  end:
    index: 174
    line: 16
    column: 0

