tests/suite/snapshots/suite__case_y2gn.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DirectivesEnd
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 3
    line: 0
    column: 3
- token: Break
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 5
    line: 1
    column: 0
- token: Indent
  start:
    index: 5
    line: 1
    column: 0
  end:
    index: 5
    line: 1
    column: 0
- token: Scalar
  start:
    index: 5
    line: 1
    column: 0
  end:
    index: 8
    line: 1
    column: 3
- token: MappingValue
  start:
    index: 8
    line: 1
    column: 3
  end:
    index: 9
    line: 1
    column: 4
- token: Separator
  start:
    index: 9
    line: 1
    column: 4
  end:
    index: 10
    line: 1
    column: 5
- token: Anchor
  start:
    index: 10
    line: 1
    column: 5
  end:
    index: 11
    line: 1
    column: 6
- token: AnchorName
  start:
    index: 11
    line: 1
    column: 6
  end:
    index: 18
    line: 1
    column: 13
- token: Separator
  start:
    index: 18
    line: 1
    column: 13
  end:
    index: 19
    line: 1
    column: 14
- token: Scalar
  start:
    index: 19
    line: 1
    column: 14
  end:
    index: 24
    line: 1
    column: 19
- token: Break
  start:
    index: 24
    line: 1
    column: 19
  end:
    index: 26
    line: 2
    column: 0

