tests/suite/snapshots/suite__case_y79y_000.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "remaining tokens: bar: 1\r\n"
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0

