tests/suite/snapshots/suite__case_y79y_001.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: Scalar
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 3
- token: MappingValue
  start:
    line: 0
    column: 3
  end:
    line: 0
    column: 4
- token: Separator
  start:
    line: 0
    column: 4
  end:
    line: 0
    column: 5
- token: Literal
  start:
    line: 0
    column: 5
  end:
    line: 0
    column: 6
- token: Break
  start:
    line: 0
    column: 6
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: Scalar
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 2
- token: ScalarBreak
  start:
    line: 1
    column: 2
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: Scalar
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 3
- token: MappingValue
  start:
    line: 2
    column: 3
  end:
    line: 2
    column: 4
- token: Separator
  start:
    line: 2
    column: 4
  end:
    line: 2
    column: 5
- token: Scalar
  start:
    line: 2
    column: 5
  end:
    line: 2
    column: 6
- token: Break
  start:
    line: 2
    column: 6
  end:
    line: 3
    column: 0

