tests/suite/snapshots/suite__case_y79y_007.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "remaining tokens: \":\\t-\\r\\n\""
  start:
    index: 5
    line: 1
    column: 0
  end:
    index: 5
    line: 1
    column: 0

