tests/suite/snapshots/suite__case_y79y_009.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "remaining tokens: :\tkey:\r\n"
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0

